update-manager (1:0.126.6) UNRELEASED; urgency=low

  * debian/control:
    - updated to point the karmic branch
  * UpdateManager/GtkProgress.py:
    - fix small cosmetic problem with the release-upgrader
      download window size

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 21 Oct 2009 09:39:52 +0200

update-manager (1:0.126.5) karmic; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py:
    - generate note if language-support is incomplete
  * DistUpgrade/DistUpgrade.cfg:
    - stop enabled apport during the upgrade
  * DistUpgrade/DistUpgradeView.py
    - add waitChild implementation from python-apt to ensure
      its working for buggy hardy python-apt
  * DistUpgrade/DistUpgradeQuirks.py:
    - mark mysql-{client,server}-5.0 manual installed in the 
      cluster check (LP: #453513)
    - check if running under a vserver setup and error if this
      is the case. upstart does not support this kind of setup
      (LP: #452011)
  * UpdateManager/Core/utils.py:
    - do not show error if DeviceKit.Power is not available
      (LP: #452004)
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Oct 2009 18:14:28 +0200

update-manager (1:0.126.4) karmic; urgency=low

  * DistUpgrade/DistUpgradeController.py:
    - fix running under ssh detection
  * DistUpgrade/DistUpgradeQuirks.py:
    - add check if NBD clustering is in use in mysql server
      and do not upgrade to 5.1 is it is (LP: #450837)
  * DistUpgrade/DistUpgrade.cfg:
    - remove mysql-server rule, this is now done in the above 
      quirks handler
  * DistUpgrade/DistUpgradeController.py:
    - do not do list cleanup so that cancel restores all of the
      previous state. the cleanup will be done later by the apt
      cron job

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 15 Oct 2009 23:36:49 +0200

update-manager (1:0.126.3) karmic; urgency=low

  * UpdateManager/UpdateManager.py:
    - refresh "last updated" text periodically to ensure its
      not stale (LP: #450286)