@@ -5,8 +5,10 @@ update-manager (1:0.126.6) UNRELEASED; urgency=low
   * UpdateManager/GtkProgress.py:
     - fix small cosmetic problem with the release-upgrader
       download window size
+  * DistUpgrade/xorg_fix_proprietary.py:
+    - if xorg.conf is zero size, remove it (LP: # 439551)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 21 Oct 2009 09:39:52 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 22 Oct 2009 18:02:51 +0200
 
 update-manager (1:0.126.5) karmic; urgency=low
 
